# messanger-with-crypting

./: .gitignore  README.md  alokhmatova.md  alokhmatova_application.md  alokhmatova_userscripts.md  changes.md  final_application.md  final_code.md  final_scripts.md  first_code.md  readme.md  second_code.md
.github/workflows/: lint.yaml
OLD/: alokhmatova_application.md
client/: .gitignore  README.md  app.py  gui_template.py  main.py  pyproject.toml
client/gui/: app.py  menu.py  mixins.py  view.py
client/gui/views/: chat.py  core.py  settings.py  storage.py  view_name.py
client/keys/: kem_keys.pem  sig_keys.pem
client/libs/oqs/include/oqs/: oqsconfig.h
client/libs/oqs/lib/: oqs-internal.lib  oqs.exp  oqs.lib
client/libs/oqs/lib/pkgconfig/: liboqs.pc
client/net/: FAKE_server.py  chat.py  message_struct.py
client/src/: main.py
client/src/gui/: app.py  menu.py  view.py
client/src/gui/views/: chat.py  help_page.py  logging_in.py  registration.py  search.py  settings.py  storage.py  test.py  view_name.py
client/src/models/: autoanswer.py  is_spam.py  spam_tracker.ipynb  summarize.py
client/src/net/: ai.py  chat.py  dto.py  message_struct.py  storage.py  utils.py
client/src/secure/: aead.py  core.py  kdf.py  kem.py  sig.py  signature.py
client/src/settings/: __init__.py  chats.py  chats_list.py  file.py  keys.py  server.py  settings.py  storage.py
server/: .dockerignore  .gitignore  Dockerfile  README.md  database.py  docker-compose.yaml  main.py  message_callback.py  message_struct.py  pyproject.toml  template.env
server/libs/oqs/include/oqs/: oqsconfig.h
server/libs/oqs/lib/: oqs.lib
server/libs/oqs/lib/cmake/liboqs/: liboqsTargets.cmake
server/src/: main.py
server/src/ai/: controllers.py  recomendations.py  router.py
server/src/files/: controllers.py  dependencies.py  router.py
server/src/files/models/: dto.py  orm.py  repositories.py
server/src/messages/: controllers.py  dependencies.py  router.py
server/src/messages/models/: dto.py  orm.py  repositories.py
server/src/users/: controllers.py  dependencies.py  middleware.py  router.py
server/src/users/models/: orm.py  repositories.py
